Реазизовать ФЗ к 6 спринту